@@ -60,7 +60,7 @@ _EMPTY_PROPERTY_EXPORT = """\
 </dummy>
 """
 
-_NORMAL_PROPERTY_EXPORT = """\
+_NORMAL_PROPERTY_EXPORT = u"""\
 <?xml version="1.0"?>
 <dummy>
  <property name="foo_boolean" type="boolean">True</property>
@@ -70,6 +70,7 @@ _NORMAL_PROPERTY_EXPORT = """\
  <property name="foo_lines" type="lines">
   <element value="Foo"/>
   <element value="Lines"/>
+  <element value="\xfcbrigens"/>
  </property>
  <property name="foo_long" type="long">1</property>
  <property name="foo_string" type="string">Foo String</property>
@@ -91,9 +92,9 @@ _NORMAL_PROPERTY_EXPORT = """\
  <property name="foo_float_nodel">3.1415</property>
  <property name="foo_boolean_nodel">True</property>
 </dummy>
-"""
+""".encode('utf-8')
 
-_FIXED_PROPERTY_EXPORT = """\
+_FIXED_PROPERTY_EXPORT = u"""\
 <?xml version="1.0"?>
 <dummy>
  <property name="foo_boolean">True</property>
@@ -103,6 +104,7 @@ _FIXED_PROPERTY_EXPORT = """\
  <property name="foo_lines">
   <element value="Foo"/>
   <element value="Lines"/>
+ <element value="\xfcbrigens"/>
  </property>
  <property name="foo_long">1</property>
  <property name="foo_string">Foo String</property>
@@ -122,7 +124,7 @@ _FIXED_PROPERTY_EXPORT = """\
  <property name="foo_float_nodel">3.1415</property>
  <property name="foo_boolean_nodel">True</property>
 </dummy>
-"""
+""".encode('utf-8')
 
 _SPECIAL_IMPORT = """\
 <?xml version="1.0"?>
@@ -303,7 +305,8 @@ class PropertyManagerHelpersTests(unittest.TestCase):
         obj._updateProperty('foo_date', '2000/01/01')
         obj._updateProperty('foo_float', '1.1')
         obj._updateProperty('foo_int', '1')
-        obj._updateProperty('foo_lines', 'Foo\nLines')
+        obj._updateProperty('foo_lines', 
+                u'Foo\nLines\n\xfcbrigens'.encode('utf-8'))
         obj._updateProperty('foo_long', '1')
         obj._updateProperty('foo_string', 'Foo String')
         obj._updateProperty('foo_text', 'Foo\nText')
@@ -328,6 +331,12 @@ class PropertyManagerHelpersTests(unittest.TestCase):
         self._populate(self.helpers.context)
         doc = self.helpers._doc = PrettyDocument()
         node = doc.createElement('dummy')
+
+        # The extraction process wants to decode text properties
+        # to unicode using the default ZPublisher encoding, which
+        # defaults to iso-8859-15. We force UTF-8 here because we 
+        # forced our properties to be UTF-8 encoded.
+        self.helpers._encoding = 'utf-8'
         node.appendChild(self.helpers._extractProperties())
         doc.appendChild(node)
 
